--- a/package.json
+++ b/package.json
@@ -9,16 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroui/react": "^2.7.5",
+    "@hookform/resolvers": "^5.0.1",
+    "@tanstack/react-query": "^5.77.2",
+    "autoprefixer": "^10.4.21",
+    "axios": "^1.8.4",
+    "clsx": "^2.1.1",
+    "cookies-next": "^5.1.0",
+    "next": "15.3.5",
+    "next-auth": "^4.24.11",
+    "next-themes": "^0.4.6",
+    "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.5"
+    "react-hook-form": "^7.55.0",
+    "react-hot-toast": "^2.5.2",
+    "tailwindcss": "^3.4.17",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "typescript": "^5"
   }
 }
